--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day Check</title>
-    <script defer src="./public/bundle.js"></script>
+    <title>Day Checker</title>
+    <script type="module" defer src="/app.js"></script>
 </head>
 <body>
     <h1>What day is it? 😕</h1>
